--- a/With Esther♥.html
+++ b/With Esther♥.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <h1><a href="Jakin's Story.html">Jakin's Story</a></h1>
+  <h1><a href="index.html">Jakin's Story</a></h1>
 
   <ol>
     <li><a href="코딩수업일기.html">코딩수업일기</a></li>
@@ -33,3 +33,4 @@
   너무 착한 울애기는 커피도 사주고 가는 동안 입벌리고 주무셨다.♥<br><br><br>
 
 </body>
+</html>
