--- a/With Esther♥.html
+++ b/With Esther♥.html
@@ -3,6 +3,17 @@
 <head>
   <title>Jakin's Story</title>
   <meta charset="utf-8">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-V78B1021LF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-V78B1021LF');
+</script>
+
 </head>
 
 <body>
@@ -31,6 +42,7 @@
   나는 커피를 마시지 않는 것이었고 애기는 집에 갈 때까지 차에서 잠을 자지 않는 것이었다.<br>
   2번한 게임 모두 1점 차이로 완전 박빙이었지만 결국 울애기가 이겼다.<br>
   너무 착한 울애기는 커피도 사주고 가는 동안 입벌리고 주무셨다.♥<br><br><br>
+
 
 </body>
 </html>
