--- a/코딩수업일기.html
+++ b/코딩수업일기.html
@@ -3,10 +3,21 @@
 <head>
   <title>Jakin's Story</title>
   <meta charset="utf-8">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-V78B1021LF"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-V78B1021LF');
+  </script>
+
 </head>
 
 <body>
-  <h1><a href="Jakin's Story.html">Jakin's Story</a></h1>
+  <h1><a href="index.html">Jakin's Story</a></h1>
 
   <ol>
     <li><a href="코딩수업일기.html">코딩수업일기</a></li>
@@ -36,3 +47,4 @@
   <p>업무 필드를 바꿀 수 있는 마지막이자 좋은 기회라는 생각이 든다.</p>
   <p>배워봐야겠다.</p>
 </body>
+</html>
